--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,6 +2,11 @@
 	<h1 class="is-size-1">Weather Woman</h1>
 </div>
 <div class="container sixty has-text-centered">
-	<img src="/saturn.jpg" alt="Saturn">
-	<p><%= message %></p>
+	<img src="/images/weather.jpg" alt="Weather">
+	<p>Timestamp: <%= data.timestamp %></p>
+	<p>Humidity: <%= data.humidity %></p>
+	<p>Temperature: <%= data.temperature %></p>
+	<p>Lightintensity: <%= data.lightintensity %></p>
+	<p>Windspeed: <%= data.windspeed %></p>
+	<p>Windspeed_cum: <%= data.windspeed_cum %></p>
 </div>
