--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,16 +1,15 @@
-<nav class="navbar is-black" role="navigation" aria-label="main navigation">
+<!-- <nav class="navbar is-black" role="navigation" aria-label="main navigation">
 	<div class="navbar-brand">
 		<a class="navbar-item" href="/">
 			<img src="/images/icon.svg" width="50" height="50" alt="WeatherAPI">
 		</a>
-		<p>Weather Woman</p>
 
-		<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="mobile-navbar">
+<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="mobile-navbar">
 			<span aria-hidden="true"></span>
 			<span aria-hidden="true"></span>
 			<span aria-hidden="true"></span>
 		</a>
-	</div>
+</div>
 
 	<div id="mobile-navbar" class="navbar-menu">
 		<div class="navbar-start">
@@ -27,4 +26,4 @@
 
 		</div>
 	</div>
-</nav>
+</nav> -->
