adding table data page

--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -17,8 +17,7 @@
 	<div style="padding-bottom: 10vh;"></div>
 	<%- include("../partials/footer") %>
 
-	<script src="/mobile.js"></script>
-
+	<!-- <script src="/mobile.js"></script> -->
 </body>
 
 </html>
