--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,7 +1,8 @@
 <footer class="foot">
 	<div class="content has-text-centered">
 		<p class="is-light">
-			<strong class="is-light">SwH</strong> - Weather Station project
+			Sketching with Hardware - WS 2022/23 - Übungsprojekt <strong class="is-light"> Wetter Station </strong>
 		</p>
+		<a class="is-light" href="/data">Tabellarische Daten</a>
 	</div>
 </footer>
