adding navbar hero and site layout

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,8 +1,8 @@
-<div class="has-text-centered">
+<!-- <div class="has-text-centered">
 	<h1 class="is-size-1">Weather Woman</h1>
-</div>
+</div> -->
+<!-- <img src="/images/weather.jpg" alt="Weather"> -->
 <div class="container sixty has-text-centered">
-	<img src="/images/weather.jpg" alt="Weather">
 	<p>Timestamp: <%= data.timestamp %></p>
 	<p>Humidity: <%= data.humidity %></p>
 	<p>Temperature: <%= data.temperature %></p>
