--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,6 +3,9 @@
 		<p class="is-light">
 			Sketching with Hardware - WS 2022/23 - Übungsprojekt <strong class="is-light"> Wetter Station </strong>
 		</p>
-		<a class="is-light" href="/data">Tabellarische Daten</a>
+		<p class="is-light">
+			Copyright &#169; Josef Mayer
+		</p>
+		<!-- <a class="is-light" href="/data">Tabellarische Daten</a> -->
 	</div>
 </footer>
