--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -7,6 +7,8 @@
 	<link rel="shortcut icon" type="image/svg" href="/images/icon.svg" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 	<link rel="stylesheet" href="/main.css">
+	<script src="https://kit.fontawesome.com/b09ee7d884.js" crossorigin="anonymous"></script>
+	<script defer src="/mobile.js"></script>
 	<title>Weather Woman</title>
 </head>
 
@@ -16,8 +18,6 @@
 	<%- body %>
 	<div style="padding-bottom: 10vh;"></div>
 	<%- include("../partials/footer") %>
-
-	<!-- <script src="/mobile.js"></script> -->
 </body>
 
 </html>
