--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -27,3 +27,73 @@
 		</div>
 	</div>
 </nav> -->
+<section class="hero is-primary is-medium">
+	<!-- Hero head: will stick at the top -->
+	<div class="hero-head">
+		<nav class="navbar">
+			<div class="container">
+				<div class="navbar-brand">
+					<a class="navbar-item" href="/">
+						<img src="/images/icon.svg" height="50" widht="50" alt="Logo" class="pr-2">
+						<span>WeatherWoman</span>
+					</a>
+					<span class="navbar-burger" data-target="navbarMenuHeroA">
+						<span></span>
+						<span></span>
+						<span></span>
+					</span>
+				</div>
+				<div id="navbarMenuHeroA" class="navbar-menu">
+					<div class="navbar-end">
+						<!-- <a class="navbar-item is-active">
+							Home
+						</a>
+						<a class="navbar-item">
+							Examples
+						</a>
+						<a class="navbar-item">
+							Documentation
+						</a> -->
+						<span class="navbar-item">
+							<a class="button is-primary is-inverted"
+								href="https://github.com/joemay96/swh_weatherstation_api" target="blank">
+								<span class="icon">
+									<i class="fab fa-github"></i>
+								</span>
+								<span>GitHub</span>
+							</a>
+						</span>
+					</div>
+				</div>
+			</div>
+		</nav>
+	</div>
+
+	<!-- Hero content: will be in the middle -->
+	<div class="hero-body">
+		<div class="container has-text-centered">
+			<p class="title">
+				Weather Woman
+			</p>
+			<p class="subtitle">
+				Die charmanteste Wetterstation der Welt
+			</p>
+		</div>
+	</div>
+
+	<!-- Hero footer: will stick at the bottom -->
+	<div class="hero-foot">
+		<nav class="tabs">
+			<div class="container">
+				<ul>
+					<li class="is-active"><a>Overview</a></li>
+					<li><a href="/" class="active">Graphs</a></li>
+					<li><a href="/data">Table Data</a></li>
+					<!-- <li><a>Elements</a></li>
+					<li><a>Components</a></li>
+					<li><a>Layout</a></li> -->
+				</ul>
+			</div>
+		</nav>
+	</div>
+</section>
