adding table data

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,10 +3,11 @@
 </div> -->
 <!-- <img src="/images/weather.jpg" alt="Weather"> -->
 <div class="container sixty has-text-centered">
-	<p>Timestamp: <%= data.timestamp %></p>
+	<canvas id="graphs" width="400" height="100" aria-label="Hello ARIA World" role="img"></canvas>
+	<!-- <p>Timestamp: <%= data.timestamp %></p>
 	<p>Humidity: <%= data.humidity %></p>
 	<p>Temperature: <%= data.temperature %></p>
 	<p>Lightintensity: <%= data.lightintensity %></p>
 	<p>Windspeed: <%= data.windspeed %></p>
-	<p>Windspeed_cum: <%= data.windspeed_cum %></p>
+	<p>Windspeed_cum: <%= data.windspeed_cum %></p> -->
 </div>
