--- a/src/views/data.ejs
+++ b/src/views/data.ejs
@@ -1,10 +1,83 @@
-<h1 class="title">Table Data</h1>
+<h1 class="title has-text-centered has-text-white pt-3">Weather Data</h1>
 
-<div class="container sixty has-text-centered">
-	<p>Timestamp: <%= data.timestamp %></p>
-	<p>Humidity: <%= data.humidity %></p>
-	<p>Temperature: <%= data.temperature %></p>
-	<p>Lightintensity: <%= data.lightintensity %></p>
-	<p>Windspeed: <%= data.windspeed %></p>
-	<p>Windspeed_cum: <%= data.windspeed_cum %></p>
+<div class="container sixty has-text-centered pb-6">
+	<table class="table is-striped is-fullwidth">
+		<thead>
+			<tr>
+				<th><abbr title="Timestamp">Time</abbr></th>
+				<th><abbr title="Temperature">Temperature</abbr></th>
+				<th><abbr title="Humidity">Humidity</abbr></th>
+				<th><abbr title="Windspeed">Windspeed</abbr></th>
+				<th><abbr title="Lightintensity">Lightintensity</abbr></th>
+			</tr>
+		</thead>
+		<!-- <tfoot>
+			<tr>
+				<th><abbr title="Position">Pos</abbr></th>
+				<th>Team</th>
+				<th><abbr title="Played">Pld</abbr></th>
+				<th><abbr title="Won">W</abbr></th>
+				<th><abbr title="Drawn">D</abbr></th>
+				<th><abbr title="Lost">L</abbr></th>
+				<th><abbr title="Goals for">GF</abbr></th>
+				<th><abbr title="Goals against">GA</abbr></th>
+				<th><abbr title="Goal difference">GD</abbr></th>
+				<th><abbr title="Points">Pts</abbr></th>
+				<th>Qualification or relegation</th>
+			</tr>
+		</tfoot> -->
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+				<td>4</td>
+				<td>5</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+				<td>4</td>
+				<td>5</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+				<td>4</td>
+				<td>5</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+				<td>4</td>
+				<td>5</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+				<td>4</td>
+				<td>5</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+				<td>4</td>
+				<td>5</td>
+			</tr>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+				<td>3</td>
+				<td>4</td>
+				<td>5</td>
+			</tr>
+
+
+		</tbody>
+	</table>
 </div>
