--- a/public/main.css
+++ b/public/main.css
@@ -6,12 +6,12 @@
 html {
     position: relative;
     min-height: 100%;
-    background: #808080;
+    background: #f0f0f0;
 }
 
-p{
+/* p{
     color: #f0f0f0;
-}
+} */
 
 a {
     color:orange;
