--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,13 +1,67 @@
-<!-- <div class="has-text-centered">
-	<h1 class="is-size-1">Weather Woman</h1>
-</div> -->
-<!-- <img src="/images/weather.jpg" alt="Weather"> -->
-<div class="container sixty has-text-centered">
-	<canvas id="graphs" width="400" height="100" aria-label="Hello ARIA World" role="img"></canvas>
-	<!-- <p>Timestamp: <%= data.timestamp %></p>
-	<p>Humidity: <%= data.humidity %></p>
-	<p>Temperature: <%= data.temperature %></p>
-	<p>Lightintensity: <%= data.lightintensity %></p>
-	<p>Windspeed: <%= data.windspeed %></p>
-	<p>Windspeed_cum: <%= data.windspeed_cum %></p> -->
+<div class="container has-text-centered pt-6">
+	<canvas id="graph" width="2000" height="1000" aria-label="Data Graph" role="img"></canvas>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<script type="text/javascript">
+
+</script>
+
+<script>
+	// data
+	let timestamps = JSON.stringify("<%= data.timestamps %>").split(",").slice(0, 150).reverse();
+	const temperatures = JSON.stringify('<%= (data.temperatures) %>').split(",").slice(0, 150).reverse();
+	const humidities = JSON.stringify('<%= (data.humidities) %>').split(",").slice(0, 150).reverse();
+	const lightintensities = JSON.stringify('<%= JSON.stringify(data.lightintensities) %>').split(",").slice(0, 150).reverse();
+	const windspeeds = JSON.stringify('<%= JSON.stringify(data.windspeeds) %>').split(",").slice(0, 150).reverse();
+
+	timestamps = timestamps.map(stamp => {
+		return stamp.split(" ")[1].split(".")[0];
+	});
+
+	console.log(typeof timestamps);
+	console.log(typeof temperatures);
+	console.log(typeof humidities);
+	console.log(typeof lightintensities);
+	console.log(typeof windspeeds);
+
+	const graphData = {
+		labels: timestamps,
+		datasets: [
+			{
+				label: "Temperatur",
+				data: temperatures,
+				fill: false,
+				borderColor: 'rgb(75, 192, 192)',
+			},
+			{
+				label: "Luftfeuchtigkeit",
+				data: humidities,
+				fill: false,
+				borderColor: 'rgb(255, 192, 192)',
+			},
+			{
+				label: "Lichtintensität",
+				data: lightintensities,
+				fill: false,
+				borderColor: 'rgb(2, 192, 100)',
+			},
+			{
+				label: "Windgeschwindigkeit",
+				data: windspeeds,
+				fill: false,
+				borderColor: 'rgb(75, 0, 192)',
+			},
+		]
+	};
+
+	config = {
+		type: "line",
+		data: graphData
+	};
+
+	new Chart(
+		document.getElementById("graph"),
+		config
+	)
+</script>
