--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.1/chart.min.js"
+		integrity="sha512-v3ygConQmvH0QehvQa6gSvTE2VdBZ6wkLOlmK7Mcy2mZ0ZF9saNbbk19QeaoTHdWIEiTlWmrwAL4hS8ElnGFbA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" type="image/svg" href="/images/icon.svg" />
