--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<section class="hero is-primary is-medium">
+<section class="hero is-info is-medium">
 	<!-- Hero head: will stick at the top -->
 	<div class="hero-head">
 		<nav class="navbar">
@@ -26,8 +26,8 @@
 							Documentation
 						</a> -->
 						<span class="navbar-item">
-							<a class="button is-primary is-inverted"
-								href="https://github.com/joemay96/swh_weatherstation" target="blank">
+							<a class="button is-info is-inverted" href="https://github.com/joemay96/swh_weatherstation"
+								target="blank">
 								<span class="icon">
 									<i class="fab fa-github"></i>
 								</span>
